// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Alsos should render multiple correctly 1`] = `
.emotion-18 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-16 {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.emotion-8 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-6 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-6 svg {
  margin: 0;
}

.emotion-4 {
  display: inline;
  vertical-align: middle;
}

<div>
  <div
    class="emotion-18 emotion-19"
    data-e2e="index-alsos"
  >
    <h4
      class="emotion-0 emotion-1"
    >
      Related content
    </h4>
    <ul
      class="emotion-16 emotion-17"
      role="list"
    >
      <li
        class="emotion-8 emotion-9"
        role="listitem"
      >
        <a
          class="emotion-6 emotion-7"
          href="/hausa/labarai-48916590"
        >
          <div
            aria-hidden="true"
            class="StyledMediaIndicator-sc-1p6h86b-0 fIPcWg"
            dir="ltr"
          >
            <div
              class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
            >
              <svg
                aria-hidden="true"
                class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
            </div>
          </div>
          <span
            role="text"
          >
            <span
              class="emotion-0 emotion-1"
            >
              video, 
            </span>
            <span
              class="emotion-4 emotion-5"
            >
              APC ba ta isa ta kore ni ba – Buba Galadima
            </span>
          </span>
        </a>
      </li>
      <li
        class="emotion-8 emotion-9"
        role="listitem"
      >
        <a
          class="emotion-6 emotion-7"
          href="/hausa/labarai-42837051"
        >
          <span
            class="emotion-4 emotion-5"
          >
            Yaushe Obasanjo ya fara yi wa shugabannin kasa baki?
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Index Alsos should render one correctly 1`] = `
.emotion-10 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-8 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-6 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-6 svg {
  margin: 0;
}

.emotion-4 {
  display: inline;
  vertical-align: middle;
}

<div>
  <div
    class="emotion-10 emotion-11"
    data-e2e="index-alsos"
  >
    <h4
      class="emotion-0 emotion-1"
    >
      Related content
    </h4>
    <div
      class="emotion-8 emotion-9"
    >
      <a
        class="emotion-6 emotion-7"
        href="/hausa/labarai-48916590"
      >
        <div
          aria-hidden="true"
          class="StyledMediaIndicator-sc-1p6h86b-0 fIPcWg"
          dir="ltr"
        >
          <div
            class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
          >
            <svg
              aria-hidden="true"
              class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
              focusable="false"
              height="12px"
              viewBox="0 0 32 32"
              width="12px"
            >
              <polygon
                points="3,32 29,16 3,0"
              />
            </svg>
          </div>
        </div>
        <span
          role="text"
        >
          <span
            class="emotion-0 emotion-1"
          >
            video, 
          </span>
          <span
            class="emotion-4 emotion-5"
          >
            APC ba ta isa ta kore ni ba – Buba Galadima
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;
